fix header space on mobile

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -10,6 +10,10 @@
     max-width: 100%;
     transition: all 0.3s ease;
 
+    @media (max-width: 767.98px) {
+        padding-top: 0;
+    }
+
     .container-fluid{
         display: flex;
         flex-wrap: wrap;
@@ -27,6 +31,7 @@
     &__logo{
         @media (max-width: 767.98px) {
             padding-left: 20px;
+            padding-top: 5px;
         }
 
         img, svg{
@@ -168,6 +173,10 @@
         justify-content: center;
         height: 41px;
         align-items: center;
+
+        @media (max-width: 767.98px) {
+            margin-top: 5px;
+        }    
     }
 
     .header-mobile {
@@ -206,7 +215,7 @@
         }
 
         &-inner{
-            padding-top: 32px;
+            padding-top: 0px;
             padding-bottom: 32px;
 
             body.logged-in & {
@@ -215,6 +224,7 @@
         }
 
         .header-main__logo{
+            padding-top: 10px;
             svg{
                 filter: brightness(0) invert(1);
                 image{
